--- a/splitemapp-android/res/layout/list_item_expense_group.xml
+++ b/splitemapp-android/res/layout/list_item_expense_group.xml
@@ -50,7 +50,7 @@
         android:layout_toEndOf="@id/b_icon_relativeLayout"
         android:layout_toRightOf="@id/b_icon_relativeLayout"
         android:background="@color/barblue"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
     <SeekBar
         android:id="@+id/b_seekBar"
@@ -58,9 +58,15 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/b_icon_relativeLayout"
         android:layout_centerVertical="true"
+        android:progressDrawable="@drawable/shape_seekbar"
+        android:padding="0dp"
+        android:progress="50"
+        android:minHeight="5dip"
+        android:maxHeight="5dip" 
         android:layout_toEndOf="@id/b_icon_relativeLayout"
         android:layout_toRightOf="@id/b_icon_relativeLayout"
-        android:visibility="invisible" />
+        android:thumb="@drawable/ic_seekbar_thumbler_6"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/b_amount_textView"
