--- a/splitemapp-android/res/layout/list_item_expense_group.xml
+++ b/splitemapp-android/res/layout/list_item_expense_group.xml
@@ -30,7 +30,17 @@
             android:layout_height="30dp"
             android:layout_centerInParent="true"
             android:contentDescription="@string/b_icon_description"
-            android:src="@drawable/ic_category_food_48dp" />
+            android:src="@drawable/ic_category_food_48dp"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/b_share_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="@color/barblue"
+            android:textSize="14sp"
+            android:visibility="invisible" />
     </RelativeLayout>
 
     <View
@@ -58,13 +68,16 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/b_icon_relativeLayout"
         android:layout_centerVertical="true"
-        android:progressDrawable="@drawable/shape_seekbar"
-        android:padding="0dp"
-        android:progress="50"
-        android:minHeight="5dip"
-        android:maxHeight="5dip" 
         android:layout_toEndOf="@id/b_icon_relativeLayout"
         android:layout_toRightOf="@id/b_icon_relativeLayout"
+        android:maxHeight="5dip"
+        android:minHeight="5dip"
+        android:paddingEnd="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingStart="5dp"
+        android:progress="50"
+        android:progressDrawable="@drawable/shape_seekbar"
         android:thumb="@drawable/ic_seekbar_thumbler_6"
         android:visibility="visible" />
 
