--- a/splitemapp-android/res/layout/list_item_expense_group.xml
+++ b/splitemapp-android/res/layout/list_item_expense_group.xml
@@ -72,24 +72,42 @@
         android:layout_toRightOf="@id/b_icon_relativeLayout"
         android:maxHeight="5dip"
         android:minHeight="5dip"
-        android:paddingEnd="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingStart="5dp"
+        android:paddingBottom="10dp"
+        android:paddingEnd="1px"
+        android:paddingLeft="1px"
+        android:paddingRight="1px"
+        android:paddingStart="1px"
+        android:paddingTop="10dp"
         android:progress="50"
         android:progressDrawable="@drawable/shape_seekbar"
         android:thumb="@drawable/ic_seekbar_thumbler_6"
+        android:thumbOffset="0px"
         android:visibility="visible" />
 
-    <TextView
-        android:id="@+id/b_amount_textView"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/b_bar_view"
-        android:layout_toRightOf="@id/b_bar_view"
-        android:text="@string/ue_amount_placeholder"
-        android:textColor="@color/middle_grey"
-        android:textSize="16sp" />
+        android:layout_toEndOf="@id/b_seekBar"
+        android:layout_toRightOf="@id/b_seekBar"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/b_amount_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/b_amount_placeholder"
+            android:textColor="@color/middle_grey"
+            android:textSize="16sp" />
+        
+        <TextView
+            android:id="@+id/b_share_balance_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/b_share_calc_placeholder"
+            android:textColor="@color/green"
+            android:textSize="16sp"
+            android:visibility="gone" />
+    </LinearLayout>
 
 </RelativeLayout>
