--- a/splitemapp-android/res/layout/list_item_expense_group_category_primary.xml
+++ b/splitemapp-android/res/layout/list_item_expense_group_category_primary.xml
@@ -30,17 +30,7 @@
             android:layout_height="30dp"
             android:layout_centerInParent="true"
             android:contentDescription="@string/b_icon_description"
-            android:src="@drawable/ic_category_food_48dp"
-            android:visibility="visible" />
-
-        <TextView
-            android:id="@+id/b_share_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="@color/barblue"
-            android:textSize="14sp"
-            android:visibility="invisible" />
+            android:src="@drawable/ic_category_food_48dp" />
     </RelativeLayout>
 
     <View
@@ -59,55 +49,23 @@
         android:layout_marginRight="5dp"
         android:layout_toEndOf="@id/b_icon_relativeLayout"
         android:layout_toRightOf="@id/b_icon_relativeLayout"
-        android:background="@color/barblue"
-        android:visibility="invisible" />
-
-    <SeekBar
-        android:id="@+id/b_seekBar"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/b_icon_relativeLayout"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/b_icon_relativeLayout"
-        android:layout_toRightOf="@id/b_icon_relativeLayout"
-        android:maxHeight="5dip"
-        android:minHeight="5dip"
-        android:paddingBottom="10dp"
-        android:paddingEnd="1px"
-        android:paddingLeft="1px"
-        android:paddingRight="1px"
-        android:paddingStart="1px"
-        android:paddingTop="10dp"
-        android:progress="50"
-        android:progressDrawable="@drawable/shape_seekbar"
-        android:thumb="@drawable/ic_seekbar_thumbler_6"
-        android:thumbOffset="0px"
-        android:visibility="visible" />
+        android:background="@color/barblue" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/b_seekBar"
-        android:layout_toRightOf="@id/b_seekBar"
+        android:layout_toEndOf="@id/b_bar_view"
+        android:layout_toRightOf="@id/b_bar_view"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/b_amount_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/b_amount_placeholder"
+            android:text="@string/b_percent_placeholder"
             android:textColor="@color/middle_grey"
             android:textSize="16sp" />
-        
-        <TextView
-            android:id="@+id/b_share_balance_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/b_share_calc_placeholder"
-            android:textColor="@color/green"
-            android:textSize="16sp"
-            android:visibility="gone" />
     </LinearLayout>
 
 </RelativeLayout>
