--- a/splitemapp-android/res/layout/fragment_balance.xml
+++ b/splitemapp-android/res/layout/fragment_balance.xml
@@ -35,13 +35,28 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
+            <TextView
+                android:id="@+id/b_top_average_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center_horizontal"
+                android:text="@string/b_average"
+                android:textColor="@color/hard_grey"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:visibility="gone" />
+
             <LinearLayout
+                android:id="@+id/b_top_month_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp"
                 android:gravity="center_horizontal"
-                android:orientation="horizontal" >
+                android:orientation="horizontal"
+                android:visibility="visible" >
 
                 <ImageView
                     android:id="@+id/b_left_arrow_imageView"
