--- a/splitemapp-android/res/layout/fragment_welcome.xml
+++ b/splitemapp-android/res/layout/fragment_welcome.xml
@@ -5,22 +5,36 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <View
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.3"
-        android:background="@color/seablue" />
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:background="@color/seablue" >
+
+        <View 
+            android:background="@drawable/shape_circle"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_centerInParent="true"/>
+        
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:contentDescription="@string/w_app_logo_description"
+            android:src="@drawable/ic_app_logo" />
+    </RelativeLayout>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/w_tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/seablue"
-        app:tabIndicatorColor="@color/purple"
+        app:tabIndicatorColor="@color/green"
+        app:tabIndicatorHeight="4dp"
         app:tabSelectedTextColor="@color/white"
         app:tabTextAppearance="@style/CustomTabTextAppearance"
-        app:tabTextColor="@color/darkblue"
-        app:tabIndicatorHeight="4dp" />
+        app:tabTextColor="@color/darkblue" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/w_viewPager"
@@ -28,7 +42,6 @@
         android:layout_height="0dp"
         android:layout_weight="0.6"
         android:background="@color/white" >
-
     </android.support.v4.view.ViewPager>
 
 </LinearLayout>
