--- a/splitemapp-android/res/values/colors.xml
+++ b/splitemapp-android/res/values/colors.xml
@@ -7,15 +7,13 @@
     <color name="middle_grey">#D8D8D8</color>
     <color name="hard_grey">#878787</color>
     <color name="white">#FFFFFF</color>
-    <color name="green">#90DD1E</color>
-    <color name="purple">#FC1169</color>
+    <color name="green">#79C67E</color>
     <color name="text">#ABBEDD</color>
     <color name="blue">#379AEA</color>
     <color name="red">#FF0000</color>
     <color name="warning">#FDBD00</color>
     <color name="seablue">#4EA6FF</color>
     <color name="barblue">#01A3CA</color>
-    <color name="seagreen">#79C67E</color>
     <color name="strongblue">#1988A4</color>
     <color name="fabblue">#53A8FC</color>
     <color name="darkblue">#0088A1</color>
