--- a/splitemapp-android/res/layout/fragment_balance.xml
+++ b/splitemapp-android/res/layout/fragment_balance.xml
@@ -52,25 +52,28 @@
                 android:id="@+id/b_top_month_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="20dp"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal"
                 android:visibility="visible" >
 
-                <ImageView
+                <LinearLayout
                     android:id="@+id/b_left_arrow_imageView"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@drawable/shape_triangle_left"
-                    android:contentDescription="@string/b_last_month" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp" >
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center_vertical"
+                        android:background="@drawable/shape_triangle_left"
+                        android:contentDescription="@string/b_last_month" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_gravity="center_vertical"
                     android:gravity="center_horizontal"
                     android:orientation="vertical" >
 
@@ -92,13 +95,19 @@
                         android:textStyle="bold" />
                 </LinearLayout>
 
-                <ImageView
+                <LinearLayout
                     android:id="@+id/b_right_arrow_imageView"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@drawable/shape_triangle_right"
-                    android:contentDescription="@string/b_next_month" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp" >
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center_vertical"
+                        android:background="@drawable/shape_triangle_right"
+                        android:contentDescription="@string/b_next_month" />
+                </LinearLayout>
             </LinearLayout>
 
             <RelativeLayout
