--- a/splitemapp-android/res/layout/fragment_expense_filter.xml
+++ b/splitemapp-android/res/layout/fragment_expense_filter.xml
@@ -6,27 +6,28 @@
     android:orientation="vertical" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/seablue"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:padding="5dp" >
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:contentDescription="@string/pef_filter_description"
-            android:padding="10dp"
-            android:src="@drawable/ic_filter_24dp" />
+            android:src="@drawable/ic_filter_white_18dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:padding="10dp"
             android:text="@string/pef_title"
             android:textColor="@color/white"
-            android:textSize="24sp" />
+            android:textSize="20sp" />
     </LinearLayout>
 
     <View
@@ -36,7 +37,7 @@
 
     <LinearLayout
         android:id="@+id/pef_top_month_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="10dp"
