--- a/splitemapp-android/res/layout/fragment_project.xml
+++ b/splitemapp-android/res/layout/fragment_project.xml
@@ -36,11 +36,7 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingStart="10dp" >
+                    android:layout_height="wrap_content" >
 
                     <ImageView
                         android:id="@+id/back_action_imageView"
@@ -48,39 +44,44 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
+                        android:layout_centerInParent="true"
                         android:contentDescription="@string/ab_back_description"
+                        android:padding="10dp"
                         android:src="@drawable/ic_arrow_back_white_24dp" />
 
-                    <ImageView
-                        android:id="@+id/menu_action_imageView"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
-                        android:contentDescription="@string/ab_menu_description"
-                        android:src="@drawable/ic_more_vert_white_24dp" />
+                        android:layout_centerInParent="true"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal" >
 
-                    <ImageView
-                        android:id="@+id/p_chart_imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_toLeftOf="@id/menu_action_imageView"
-                        android:layout_toStartOf="@id/menu_action_imageView"
-                        android:contentDescription="@string/ab_menu_description"
-                        android:src="@drawable/ic_chart_bar_24dp" />
-                    
-                    <ImageView
-                        android:id="@+id/p_filter_imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_toLeftOf="@id/p_chart_imageView"
-                        android:layout_toStartOf="@id/p_chart_imageView"
-                        android:contentDescription="@string/ab_menu_description"
-                        android:src="@drawable/ic_filter_24dp" />
+                        <ImageView
+                            android:id="@+id/p_filter_imageView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:contentDescription="@string/ab_menu_description"
+                            android:padding="10dp"
+                            android:src="@drawable/ic_filter_white_18dp" />
+
+                        <ImageView
+                            android:id="@+id/p_chart_imageView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:contentDescription="@string/ab_menu_description"
+                            android:padding="10dp"
+                            android:src="@drawable/ic_chart_bar_24dp" />
+
+                        <ImageView
+                            android:id="@+id/menu_action_imageView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:contentDescription="@string/ab_menu_description"
+                            android:padding="10dp"
+                            android:src="@drawable/ic_more_vert_white_24dp" />
+                    </LinearLayout>
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
         </LinearLayout>
@@ -114,11 +115,18 @@
             android:layout_height="wrap_content" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
+    <View
+        android:id="@+id/p_topLayoutShadow"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_below="@id/imagelayout"
+        android:background="@drawable/shape_toolbar_dropshadow" />
+
     <TextView
         android:id="@+id/p_empty_list_hint_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imagelayout"
+        android:layout_below="@id/p_topLayoutShadow"
         android:layout_marginTop="60dp"
         android:drawableTop="@drawable/ic_money_grey_48dp"
         android:gravity="center_horizontal"
