--- a/splitemapp-android/res/drawable/shape_toast.xml
+++ b/splitemapp-android/res/drawable/shape_toast.xml
@@ -4,9 +4,9 @@
 
     <stroke
         android:width="2dp"
-        android:color="@color/warning" />
+        android:color="@color/black" />
 
-    <solid android:color="@color/warning" />
+    <solid android:color="@color/black" />
 
     <corners
         android:bottomLeftRadius="5dp"
