--- a/splitemapp-android/res/layout/fragment_settings.xml
+++ b/splitemapp-android/res/layout/fragment_settings.xml
@@ -185,7 +185,8 @@
                 style="@style/Button"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:text="@string/s_splitemapp_faq" />
+                android:text="@string/s_splitemapp_faq"
+                android:visibility="gone" />
             
         </LinearLayout>
     </ScrollView>
