--- a/splitemapp-android/res/layout/fragment_home.xml
+++ b/splitemapp-android/res/layout/fragment_home.xml
@@ -15,20 +15,19 @@
         <RelativeLayout
             android:id="@+id/h_topLayout"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/home_image_height"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/home_background" >
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true" >
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
-                android:paddingStart="0dp"
+                android:background="@color/seablue"
+                android:gravity="end"
+                android:paddingEnd="5dp"
                 android:paddingLeft="0dp"
                 android:paddingRight="5dp"
-                android:paddingEnd="5dp" >
+                android:paddingStart="0dp" >
 
                 <ImageView
                     android:id="@+id/h_filter_imageView"
@@ -48,38 +47,6 @@
                     android:padding="5dp"
                     android:src="@drawable/ic_more_vert_white_24dp" />
             </LinearLayout>
-
-            <ImageView
-                android:id="@+id/h_main_avatar_imageView"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_alignParentTop="true"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="25dp"
-                android:contentDescription="@string/h_avatar_description"
-                android:gravity="center_horizontal"
-                android:src="@drawable/ic_avatar_placeholder_80dp" />
-
-            <TextView
-                android:id="@+id/h_main_full_name_textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/h_main_avatar_imageView"
-                android:gravity="center_horizontal"
-                android:text="@string/h_name"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/h_main_email_textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/h_main_full_name_textView"
-                android:layout_marginBottom="15dp"
-                android:gravity="center_horizontal"
-                android:text="@string/h_email"
-                android:textColor="@color/white"
-                android:textSize="12sp" />
         </RelativeLayout>
 
         <View
@@ -106,10 +73,9 @@
             android:id="@+id/h_empty_list_hint_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/h_topLayout"
-            android:layout_marginTop="60dp"
             android:drawableTop="@drawable/ic_list_add_48dp"
             android:gravity="center_horizontal"
+            android:layout_centerInParent="true"
             android:paddingLeft="40dp"
             android:paddingRight="40dp"
             android:text="@string/h_empty_list_hint"
