--- a/splitemapp-android/res/layout/list_item_user_expense.xml
+++ b/splitemapp-android/res/layout/list_item_user_expense.xml
@@ -19,10 +19,10 @@
             android:id="@+id/ue_action_archive_imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginStart="10dp"
+            android:paddingEnd="20dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingStart="20dp"
             android:contentDescription="@string/ue_action_archive"
             android:src="@drawable/ic_archive_24dp" />
     </LinearLayout>
