--- a/splitemapp-android/res/layout/fragment_welcome.xml
+++ b/splitemapp-android/res/layout/fragment_welcome.xml
@@ -1,47 +1,51 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/NoActionBarTheme"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:background="@color/seablue" >
+        android:orientation="vertical" >
 
-        <View 
-            android:background="@drawable/shape_circle"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_centerInParent="true"/>
-        
-        <ImageView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:contentDescription="@string/w_app_logo_description"
-            android:src="@drawable/ic_app_logo" />
-    </RelativeLayout>
+            android:background="@color/seablue"
+            android:padding="20dp" >
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/w_tabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/seablue"
-        app:tabIndicatorColor="@color/green"
-        app:tabIndicatorHeight="4dp"
-        app:tabSelectedTextColor="@color/white"
-        app:tabTextAppearance="@style/CustomTabTextAppearance"
-        app:tabTextColor="@color/darkblue" />
+            <View
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_centerInParent="true"
+                android:background="@drawable/shape_circle" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/w_viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.6"
-        android:background="@color/white" >
-    </android.support.v4.view.ViewPager>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:contentDescription="@string/w_app_logo_description"
+                android:src="@drawable/ic_app_logo" />
+        </RelativeLayout>
 
-</LinearLayout>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/w_tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/seablue"
+            app:tabIndicatorColor="@color/green"
+            app:tabIndicatorHeight="4dp"
+            app:tabSelectedTextColor="@color/white"
+            app:tabTextAppearance="@style/CustomTabTextAppearance"
+            app:tabTextColor="@color/darkblue" />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/w_viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="330dp"
+            android:background="@color/white" >
+        </android.support.v4.view.ViewPager>
+    </LinearLayout>
+
+</ScrollView>
