--- a/splitemapp-android/res/drawable/shape_button_rounded_corners_selector.xml
+++ b/splitemapp-android/res/drawable/shape_button_rounded_corners_selector.xml
@@ -1,5 +1,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:drawable="@drawable/shape_button_rounded_corners_disabled" android:state_enabled="false"/>
     <item android:drawable="@drawable/shape_button_rounded_corners_pressed" android:state_pressed="true"/>
     <item android:drawable="@drawable/shape_button_rounded_corners_normal"/>
 
