SPLITEMAPP-80 Adding validators to create account, create project, expense, contact management and settings screens

--- a/splitemapp-android/res/drawable/shape_button_rounded_corners_disabled.xml
+++ b/splitemapp-android/res/drawable/shape_button_rounded_corners_disabled.xml
@@ -3,10 +3,10 @@
 
     <corners android:radius="3dp" />
 
-    <solid android:color="@color/grey" />
+    <solid android:color="@color/darkblue" />
 
     <stroke
         android:width="5px"
-        android:color="@color/grey" />
+        android:color="@color/darkblue" />
 
 </shape>
