--- a/splitemapp-android/res/drawable/shape_rectangle_warning.xml
+++ b/splitemapp-android/res/drawable/shape_rectangle_warning.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="@color/white" />
+    <solid android:color="@color/fullytransparent" />
 
     <stroke
         android:width="1dip"
-        android:color="@color/green" />
+        android:color="@color/warning" />
 
     <corners android:radius="3dip" />
 
