--- a/splitemapp-android/res/values/colors.xml
+++ b/splitemapp-android/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="fabblue">#53A8FC</color>
     <color name="darkblue">#0088A1</color>
     <color name="transparent">#80FFFFFF</color>
+    <color name="fullytransparent">#00FFFFFF</color>
     <color name="semi_transparent">#33676767</color>
 
 </resources>
