--- a/splitemapp-android/res/layout/fragment_login.xml
+++ b/splitemapp-android/res/layout/fragment_login.xml
@@ -30,8 +30,17 @@
     <Button
         android:id="@+id/li_login_button"
         style="@style/Button"
-        android:layout_marginBottom="22dp"
         android:layout_marginTop="22dp"
+        android:layout_marginBottom="22dp"
         android:text="@string/li_log_in_button" />
+    
+    <TextView
+        android:id="@+id/li_forgot_password"
+        android:padding="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/seablue"
+        android:text="@string/li_forgot_password" />
 
 </LinearLayout>
