--- a/splitemapp-android/res/values/styles.xml
+++ b/splitemapp-android/res/values/styles.xml
@@ -34,7 +34,7 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">17sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@color/fullytransparent</item>
     </style>
 
     <style name="BlueCustomEditText" parent="Theme.AppCompat">
@@ -67,7 +67,7 @@
     </style>
 
     <style name="CustomTextView" parent="Theme.AppCompat">
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@color/fullytransparent</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/seablue</item>
