--- a/SplitemApp/app/src/main/res/layout/list_item_expense_category.xml
+++ b/SplitemApp/app/src/main/res/layout/list_item_expense_category.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
     android:background="@color/white"
     android:layout_marginTop="5dp"
     android:orientation="vertical"
@@ -8,18 +9,21 @@
 
     <ImageView
         android:id="@+id/e_expense_category_icon_imageView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_gravity="center"
+        android:src="@drawable/ic_category_shopping_48dp"
         android:contentDescription="@string/e_category_description" />
 
     <TextView
         android:id="@+id/e_expense_category_title_textView"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:layout_gravity="center"
         android:gravity="center"
         android:textColor="@color/black"
+        android:text="@string/e_category_shopping"
         android:textSize="12sp" />
 
 </LinearLayout>
