SPLITEMAPP-72 Making the FAB buttons semi transparent.

--- a/SplitemApp/app/src/main/res/layout/fragment_home.xml
+++ b/SplitemApp/app/src/main/res/layout/fragment_home.xml
@@ -86,7 +86,8 @@
             android:id="@+id/h_fab"
             style="@style/MainFAB"
             android:layout_alignParentBottom="true"
-            app:backgroundTint="@color/fabblue"
+            app:backgroundTint="@color/tfabblue"
+            android:src="@drawable/ic_plus_white_36dp"
             app:borderWidth="0dp"
             app:elevation="6dp"
             app:fabSize="normal"
