--- a/SplitemApp/app/src/main/res/layout/fragment_create_project.xml
+++ b/SplitemApp/app/src/main/res/layout/fragment_create_project.xml
@@ -102,7 +102,8 @@
         style="@style/MainFAB"
         app:layout_anchor="@id/cp_users_recyclerView"
         app:layout_anchorGravity="bottom|right|end"
-        app:backgroundTint="@color/fabblue"
+        app:backgroundTint="@color/tfabblue"
+        android:src="@drawable/ic_plus_white_36dp"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"
