--- a/SplitemApp/app/src/main/res/layout/fragment_project.xml
+++ b/SplitemApp/app/src/main/res/layout/fragment_project.xml
@@ -140,7 +140,8 @@
         android:id="@+id/p_fab"
         style="@style/MainFAB"
         android:layout_alignParentBottom="true"
-        app:backgroundTint="@color/fabblue"
+        app:backgroundTint="@color/tfabblue"
+        android:src="@drawable/ic_plus_white_36dp"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"
