--- a/SplitemApp/app/src/main/res/values/colors.xml
+++ b/SplitemApp/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="fabblue">#53A8FC</color>
     <color name="darkblue">#0088A1</color>
     <color name="transparent">#80FFFFFF</color>
+    <color name="tfabblue">#F053A8FC</color>
     <color name="fullytransparent">#00FFFFFF</color>
     <color name="semi_transparent">#33676767</color>
 </resources>
