--- a/SplitemApp/app/src/main/res/layout/fragment_settings.xml
+++ b/SplitemApp/app/src/main/res/layout/fragment_settings.xml
@@ -38,14 +38,31 @@
                 android:layout_height="wrap_content"
                 android:padding="15dp" >
 
-                <ImageView
-                    android:id="@+id/s_avatar_imageView"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                <RelativeLayout
+                    android:id="@+id/s_avatar_view"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:contentDescription="@string/s_avatar_description"
-                    android:src="@drawable/ic_avatar_placeholder_80dp" />
+                    android:layout_alignParentStart="true" >
+
+                    <ImageView
+                        android:id="@+id/s_avatar_imageView"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_centerInParent="true"
+                        android:contentDescription="@string/h_avatar_description"
+                        android:src="@drawable/shape_circle_blue" />
+
+                    <TextView
+                        android:id="@+id/s_initials_textView"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_centerInParent="true"
+                        android:gravity="center"
+                        android:textSize="35dp"
+                        android:textColor="@color/grey" />
+                </RelativeLayout>
+
 
                 <EditText
                     android:id="@+id/s_full_name_editText"
@@ -55,8 +72,8 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
-                    android:layout_toEndOf="@id/s_avatar_imageView"
-                    android:layout_toRightOf="@id/s_avatar_imageView"
+                    android:layout_toEndOf="@id/s_avatar_view"
+                    android:layout_toRightOf="@id/s_avatar_view"
                     android:background="@color/white"
                     android:inputType="textPersonName"
                     android:padding="0dp"
@@ -71,8 +88,8 @@
                     android:layout_below="@id/s_full_name_editText"
                     android:layout_marginLeft="10dp"
                     android:layout_marginStart="10dp"
-                    android:layout_toEndOf="@id/s_avatar_imageView"
-                    android:layout_toRightOf="@id/s_avatar_imageView"
+                    android:layout_toEndOf="@id/s_avatar_view"
+                    android:layout_toRightOf="@id/s_avatar_view"
                     android:text="@string/s_email"
                     android:textColor="@color/hard_grey"
                     android:textSize="14sp" />
