--- a/SplitemApp/app/src/main/res/layout/list_item_contact.xml
+++ b/SplitemApp/app/src/main/res/layout/list_item_contact.xml
@@ -13,21 +13,45 @@
         android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
         android:textColor="@color/black"
         android:text="@string/pc_contact_fullname_placeholder"
-        android:textSize="22sp"/>
-    
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerVertical="true"
+        android:textSize="20sp"/>
+
+    <RelativeLayout
+        android:id="@+id/pc_avatar_view"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginEnd="10dp"
         android:layout_alignParentEnd="true"
-        android:src="@drawable/ic_checkbox_blank_circle_outline_48dp"
-        android:id="@+id/pc_user_status_icon" 
-        android:contentDescription="@string/pc_status_description"/>
+        android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp" >
+
+        <ImageView
+            android:id="@+id/pc_user_status_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="2dp"
+            android:layout_centerInParent="true"
+            android:contentDescription="@string/h_avatar_description"
+            android:src="@drawable/shape_circle_blue" />
+
+        <TextView
+            android:id="@+id/pc_initials_textView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textColor="@color/grey" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_below="@id/pc_avatar_view"
+        android:background="@color/grey" />
 
 </RelativeLayout>
